# Claude-OpenBrain

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml  open-brain-projektplan.md
brain-cli/: Cargo.toml
brain-cli/src/: main.rs
brain-core/: Cargo.toml  Dockerfile
brain-core/src/: api.rs  db.rs  embeddings.rs  main.rs  models.rs
brain-ui/: Dockerfile
brain-ui/static/: index.html
dev-container/: Dockerfile  requirements.txt
dev-container/tests/: conftest.py  test_api_health.py  test_api_search.py  test_api_thoughts.py
dev-container/tests/models/: thought.py
docs/: entwicklungsvorgaben.md  lessons-learned.md
docs/plans/: 2026-03-03-phase-2-design.md
embedding-fallback/: Dockerfile  requirements.txt  server.py
migrations/: 001_initial.sql
